[package]
name = "bladerf"
version = "0.1.0"

repository = "https://github.com/ryankurte/rust-bladerf"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]

description = "WIP Rust wrapper for libbladerf"
readme = "README.md"
license = "MIT"

[lib]
name = "bladerf"
path = "src/lib.rs"

[[bin]]
name = "bladerf"
path = "src/bin.rs"

[dependencies]
libc = "0.1.10"
num-complex = "0.4.6"
